out/old/manifests/spinnaker/Ingress.spinnaker-ingress.yaml
metadata:
  name: spinnaker-ingress
  namespace: spinnaker
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"spinnaker:spin-deck","ingressName":"spinnaker:spinnaker-ingress","hostname":"spinnaker.<COMPANY><DOMAIN_14>","path":"/","allNodes":false},{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"spinnaker:spin-gate","ingressName":"spinnaker:spinnaker-ingress","hostname":"spinnaker-gate.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: spinnaker.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-deck
            port:
              number: 9000
  - host: spinnaker-gate.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port:
              number: 8084
apiVersion: <DOMAIN_775>/v1
kind: Ingress
